// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIAutocompleter has data-automationid set on the input, list, dropdown and container 1`] = `
<div
  className=""
  data-automationid="baseAC--container"
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid="baseAC--dropdown"
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid="baseAC"
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid="baseAC--input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter inserts the searchValue inside the input 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value="a"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter renders with a hidden label 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label="Im a little label"
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter renders with the provided label 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <span
          className="xui-text-label xui-fieldlabel-layout"
          data-automationid={null}
          id="testAutocompleterId"
        >
          Im a little label
        </span>
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby="testAutocompleterId"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should not add padding classes to the input when pills prop is an empty array 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the input element when passed in the inputClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="test-class xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the root node when passed in the className prop 1`] = `
<div
  className="test-class"
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the trigger element when passed in the triggerClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className="test-class"
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a placeholder inside the input when passed in 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      >
        Search
      </div>
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label="Search"
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder="Search"
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the input when a value is passed to the inputId prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id="test-inputId"
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the root node when passed in the id prop 1`] = `
<div
  className=""
  data-automationid={null}
  id="test-id"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render as disabled when isDisabled prop is true 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-is-disabled"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value=""
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should respect a max length of the input value when the maxLength has a value 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={undefined}
    aria-owns={undefined}
    className={undefined}
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup="listbox"
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <label
        className="xui-textinputwrapper"
        onClick={undefined}
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            aria-autocomplete="list"
            aria-describedby={undefined}
            aria-invalid={undefined}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={5}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            role="textbox"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value="123456"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
